   -- Fixed bug that caused monster generation to hang if unable to generate
      monsters because all of them were disabled.
   -- Fixed a typo which had storm giants and cloud giants having the same tag
   -- Fixed up the code slightly so that if you defined NEXUS_IS_CITY it
      actually gives the nexus some sort of items and population.
   -- Fixed up the code slightly so that starting citys aren't created if you
      set TOWNS_EXIST to false.
   -- Fixed up the code so that gates aren't created and gate lore is disabled
      if GATES_EXIST is set to false.
   -- Fixed bug where large maps were coring all over themselves due to
      a stack smash.  Stupid bug.
   -- Fixed another bug where regions got trashed when you managed (say
      during world creation) to create more than 10000 units in a turn.
   -- Balanced lances a bit.
   -- Now handles ultra-small worlds gracefully (either by failing to
      create the exit, or promoting some location). World creation down to
      8x8 now works.
   -- Added gamedef 'MULTI_HEX_NEXUS'.  If this is set, then on world creation
      you will be asked how many nexus hexes there should be.  The nexus
      will then be a connected strip of x hexes wide and 1 deep.   Each nexus
      hex will connect to 4 cities and to the two adjacent nexus hexes.
      New players will be started in a random nexus hex.   This does hinder
      alliances somewhat as may be harder for them to get to the same place
      in order to move to the same starting city.
   -- Fixed bug in combat where if all of the attackers unit in a hex were
      set avoid, the attacker could (in contradiction to the rules) issue
      an attack against an ally.
   -- Fixed bug where FORCE Shield did not protect agaisnt bow attacks.
      Force shield changed to protect against all ranged weapon attacks.
   -- Fixed bug which caused GCC v3.0 to not compile atlantis
   -- Moved TODO list to it's own file